syntax = "proto3";
package layer.oracle;

import "gogoproto/gogo.proto";
import "layer/oracle/params.proto";

option go_package = "github.com/tellor-io/layer/x/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated bytes cyclelist = 2 [(gogoproto.nullable) = false];
  uint64 query_data_limit = 3;
}
